# SWE-4-DS

./: .gitignore  README.md
Consumer_API/: .gitignore  README.md  data_loader.py  pyproject.toml  requirements.txt  test_api.py  train.py
aulas/: Indice.md  Pre-requisitos.md  README.md
aulas/aula01-fundamentos-engenharia-software/: README.md  aula-01-video-01.md  aula-01-video-02.md  aula-01-video-03.md  aula-01-video-04.md
aulas/aula02-git-controle-versao/: README.md  aula-02-video-01.md  aula-02-video-02.md  aula-02-video-03.md  aula-02-video-04.md
aulas/aula03-testes-automatizados/: README.md  aula-03-video-01.md  aula-03-video-02.md  aula-03-video-03.md  aula-03-video-04.md
aulas/aula04-ambientes-reprodutiveis-docker/: README.md  aula-04-video-01.md  aula-04-video-02.md  aula-04-video-03.md  aula-04-video-04.md
aulas/aula05-gerenciamento-dependencias/: README.md  aula-05-video-01.md  aula-05-video-02.md  aula-05-video-03.md  aula-05-video-04.md
aulas/aula06-padroes-codigo-estilo/: README.md  aula-06-video-01.md  aula-06-video-02.md  aula-06-video-03.md  aula-06-video-04.md
aulas/aula07-deploy-monitoramento/: README.md  aula-07-video-01.md  aula-07-video-02.md  aula-07-video-03.md  aula-07-video-04.md
aulas/aula08-refatoracao-projeto-ds/: README.md  aula-08-video-01.md  aula-08-video-02.md  aula-08-video-03.md  aula-08-video-04.md
credit_default_api/: Dockerfile.mlflow  README.md  bentofile.yaml  docker-compose.yml  pyproject.toml  requirements.txt  service.py
swe4ds-credit-api/: .gitignore  Dockerfile  ESTRUTURA.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
swe4ds-credit-api/.github/workflows/: ci.yml  cicd.yml
swe4ds-credit-api/scripts/: deploy_staging.ps1  run_batch.py
swe4ds-credit-api/src/: __init__.py  main.py
swe4ds-credit-api/src/routes/: metrics.py  predict.py
swe4ds-credit-api/src/services/: model_service.py
swe4ds-credit-api/tests/: test_health.py  test_metrics.py  test_predict.py
