[project]
name = "credit-default-api"
version = "1.0.0"
description = "Credit Card Default Prediction API using Decision Tree with BentoML and MLflow"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "POSTECH FIAP", email = "ml-team@example.com"}
]
keywords = ["machine-learning", "mlflow", "bentoml", "credit-risk", "decision-tree"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # ML Framework
    "scikit-learn==1.5.2",
    "pandas==2.2.3",
    "numpy==1.26.4",
    
    # MLflow for experiment tracking
    "mlflow==2.18.0",
    
    # BentoML for model serving
    "bentoml==1.3.13",
    
    # Data processing
    "imbalanced-learn==0.12.4",
    
    # Utilities
    "requests==2.32.3",
    "python-dotenv==1.0.1",
    
    # Dataset loading
    "ucimlrepo==0.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
train-model = "train:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
